--- a/tut4-TicTacToe/tut4-TicTacToe.vcxproj
+++ b/tut4-TicTacToe/tut4-TicTacToe.vcxproj
@@ -79,6 +79,7 @@
     <ClInclude Include="TicTacToe.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="TEST.cpp" />
     <ClCompile Include="TicTacToe.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
